force-app/main/default/objects/ComissaoFaixaDesconto__c/ComissaoFaixaDesconto__c.object-meta.xml
<CustomObject>
    <label>Comissão Faixa de Desconto</label>
    <nameField>
        <displayFormat>CFD {0000000000}</displayFormat>
        <label>N° Comissão</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comissões Faixa de Desconto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>