force-app/main/default/objects/ComissaoFaixaDesconto__c/fields/CodigoComissaoFaixaDesconto__c.field-meta.xml
<CustomField>
    <fullName>CodigoComissaoFaixaDesconto__c</fullName>
    <externalId>true</externalId>
    <label>Código Comissão Faixa de Desconto</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>