force-app/main/default/objects/ComissaoFaixaDesconto__c/fields/FaixaFinalAcrescimo__c.field-meta.xml
<CustomField>
    <fullName>FaixaFinalAcrescimo__c</fullName>
    <label>Faixa Final Desconto/Acréscimo</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>