force-app/main/default/objects/ComissaoFaixaDesconto__c/fields/FaixaInicialDescontoAcrescimo__c.field-meta.xml
<CustomField>
    <fullName>FaixaInicialDescontoAcrescimo__c</fullName>
    <label>Faixa Inicial Desconto/Acréscimo</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>