force-app/main/default/objects/ComissaoFaixaDesconto__c/fields/ListaPreco__c.field-meta.xml
<CustomField>
    <fullName>ListaPreco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Preço</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Comissões Faixa de Desconto</relationshipLabel>
    <relationshipName>ComissoesFaixaDesconto</relationshipName>
    <type>Lookup</type>
</CustomField>